tested parse.py, .gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 massif.out.*
 client
 server
-Pi-3/Analysis/.vscode/launch.json
 .gitignore
 Pi-3/Analysis/test_parse.py
+Pi-3/Analysis/.vscode/
+Pi-3/Analysis/__pycache__/
