--- a/Pi-Pico/Pico Timers/CMakeLists.txt
+++ b/Pi-Pico/Pico Timers/CMakeLists.txt
@@ -16,6 +16,7 @@ pico_sdk_init()
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME}
     systick.h
+    utime.h
     main.c
 )
 
