new systick file, implement and test systick list

--- a/Pi-Pico/Pico Timers/CMakeLists.txt
+++ b/Pi-Pico/Pico Timers/CMakeLists.txt
@@ -15,6 +15,7 @@ pico_sdk_init()
 
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME}
+    systick_old.h
     systick.h
     utime.h
     main.c
