implement and test demo_flash

--- a/Pi-Pico/Pico Flash/CMakeLists.txt
+++ b/Pi-Pico/Pico Flash/CMakeLists.txt
@@ -9,17 +9,18 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 
 add_executable(${PROJECT_NAME}
-    flashobj.h
-    flash.h
     memobj.h
+    flashobj.h
+    flashmem.h
     main.c
 )
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 pico_add_extra_outputs(${PROJECT_NAME})
 
 target_link_libraries(${PROJECT_NAME}
-    pico_stdlib
     hardware_flash
+    pico_stdlib
 )
 
 pico_enable_stdio_usb(${PROJECT_NAME} 0)
