--- a/Pi-Pico/pico_pqc_sdk/examples/test_timers/CMakeLists.txt
+++ b/Pi-Pico/pico_pqc_sdk/examples/test_timers/CMakeLists.txt
@@ -1,6 +1,4 @@
-add_executable(test_timers
-    test_timers.c
-    )
+add_executable(test_timers test_timers.c)
 
 target_link_libraries(test_timers PUBLIC 
     pqc_utimer
