--- a/Pi-Pico/controller/Benchmarks/Latency/CMakeLists.txt
+++ b/Pi-Pico/controller/Benchmarks/Latency/CMakeLists.txt
@@ -7,8 +7,6 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
 set(PICO_BOARD pico_w)
-#set(WIFI_SSID SOTON-IoT)
-#set(WIFI_PASSWORD iHb53kKlQcSj)
 set(WIFI_SSID "TOMS LAPTOP")
 set(WIFI_PASSWORD "12345678")
 set(PICO_MBEDTLS_PATH $ENV{PICO_SDK_PATH}/lib/mbedtls)
@@ -19,7 +17,7 @@ add_subdirectory(src)
 
 add_executable(latency_benchmark_client
         client.c
-        ../pico_client.c
+        pico_client.c
         )
 target_compile_definitions(latency_benchmark_client PRIVATE
         WIFI_SSID=\"${WIFI_SSID}\"
@@ -27,7 +25,6 @@ target_compile_definitions(latency_benchmark_client PRIVATE
         )
 target_include_directories(latency_benchmark_client PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}
-        ${CMAKE_CURRENT_LIST_DIR}/.. # for our common lwipopts
         )
 target_link_libraries(latency_benchmark_client
         pico_cyw43_arch_lwip_threadsafe_background
